product and category to onpenapi
