# src/main/java/ru/skydiver/backend/skydiver/model/CategoryEntity.java
@@ -1,10 +1,10 @@
 package ru.skydiver.backend.skydiver.model;
-public class CategoryDto {
+public class CategoryEntity {
     private final int id;
     private final String name;
     private final boolean isMainPage;
     private final String imageURL;
-    public CategoryDto(int id, String name, boolean isMainPage, String imageURL) {
+    public CategoryEntity(int id, String name, boolean isMainPage, String imageURL) {
         this.id = id;
         this.name = name;
         this.isMainPage = isMainPage;
